Name:                GPX
Version:             0.1
License:             BSD3
License-File:        LICENSE
Synopsis:            Parse GPX files
Description:         Parse GPS Exchange (GPX) files using HXT into data structures.
Homepage:            http://code.google.com/p/geo-gpx/
Category:            Utils
Author:              Tony Morris
Maintainer:          code@tmorris.net
Copyright:           2009 Tony Morris
build-type:          Simple
cabal-version:       >= 1.2

Flag small_base
  Description:     Choose the new, split-up base package.

Library
  if flag(small_base)
    Build-Depends: base < 4 && >= 3, hxt, hxt-extras, containers
  else
    Build-Depends: base < 3, hxt, hxt-extras, containers

  GHC-Options:    -Wall
  Exposed-Modules: Geo.GPX
                   Geo.GPX.DgpsStation
                   Geo.GPX.Fix
                   Geo.GPX.Degrees
                   Geo.GPX.Longitude
                   Geo.GPX.Latitude
                   Geo.GPX.Bounds
                   Geo.GPX.Extensions
                   Geo.GPX.Pt
                   Geo.GPX.Ptseg
                   Geo.GPX.Email
                   Geo.GPX.Link
                   Geo.GPX.Person
                   Geo.GPX.Copyright
                   Geo.GPX.Wpt
                   Geo.GPX.Trkseg
                   Geo.GPX.Trk
                   Geo.GPX.Rte
                   Geo.GPX.Metadata
                   Geo.GPX.Gpx
