Name:                GPX
Version:             0.1
License:             BSD3
License-File:        LICENSE
Synopsis:            Parse GPX files
Description:         Parse GPS Exchange (GPX) files using HXT into data structures.
Homepage:            http://code.google.com/p/geo-gpx/
Category:            Utils
Author:              Tony Morris
Maintainer:          code@tmorris.net
Copyright:           2009 Tony Morris
build-type:          Simple
cabal-version:       >= 1.2

Flag small_base
  Description:     Choose the new, split-up base package.

Library
  if flag(small_base)
    Build-Depends: base < 4 && >= 3, hxt, hxt-extras, containers
  else
    Build-Depends: base < 3, hxt, hxt-extras, containers

  GHC-Options:    -Wall
  Exposed-Modules: Geo.GPX
                   Geo.GPX.DgpsStationType
                   Geo.GPX.FixType
                   Geo.GPX.DegreesType
                   Geo.GPX.LongitudeType
                   Geo.GPX.LatitudeType
                   Geo.GPX.BoundsType
                   Geo.GPX.ExtensionsType
                   Geo.GPX.PtType
                   Geo.GPX.PtsegType
                   Geo.GPX.EmailType
                   Geo.GPX.LinkType
                   Geo.GPX.PersonType
                   Geo.GPX.CopyrightType
                   Geo.GPX.WptType
                   Geo.GPX.TrksegType
                   Geo.GPX.TrkType
                   Geo.GPX.RteType
                   Geo.GPX.MetadataType
                   Geo.GPX.GpxType
