Name:                GPX
Version:             0.1
License:             BSD3
License-File:        LICENSE
Synopsis:            Parse GPX files
Description:         Parse GPS Exchange (GPX) files using HXT into data structures.
Homepage:            http://code.google.com/p/geo-gpx/
Category:            Utils
Author:              Tony Morris
Maintainer:          code@tmorris.net
Copyright:           2009 Tony Morris
build-type:          Simple
cabal-version:       >= 1.2

Flag small_base
  Description:     Choose the new, split-up base package.

Library
  if flag(small_base)
    Build-Depends: base < 4 && >= 3, hxt, hxt-extras, containers
  else
    Build-Depends: base < 3, hxt, hxt-extras, containers

  GHC-Options:    -Wall
  Exposed-Modules: Data.Geo.GPX
                   Data.Geo.GPX.DgpsStationType
                   Data.Geo.GPX.FixType
                   Data.Geo.GPX.DegreesType
                   Data.Geo.GPX.LongitudeType
                   Data.Geo.GPX.LatitudeType
                   Data.Geo.GPX.BoundsType
                   Data.Geo.GPX.ExtensionsType
                   Data.Geo.GPX.PtType
                   Data.Geo.GPX.PtsegType
                   Data.Geo.GPX.EmailType
                   Data.Geo.GPX.LinkType
                   Data.Geo.GPX.PersonType
                   Data.Geo.GPX.CopyrightType
                   Data.Geo.GPX.WptType
                   Data.Geo.GPX.TrksegType
                   Data.Geo.GPX.TrkType
                   Data.Geo.GPX.RteType
                   Data.Geo.GPX.MetadataType
                   Data.Geo.GPX.GpxType
                   Data.Geo.GPX.Gpx
                   Data.Geo.GPX.Accessor.Minlat
                   Data.Geo.GPX.Accessor.Maxlat
                   Data.Geo.GPX.Accessor.Minlon
                   Data.Geo.GPX.Accessor.Maxlon
                   Data.Geo.GPX.Accessor.Author
                   Data.Geo.GPX.Accessor.Year
                   Data.Geo.GPX.Accessor.License
                   Data.Geo.GPX.Accessor.Value
