name:               gpx
version:            0.7.0
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>, Thomas DuBuisson
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>, Thomas DuBuisson
copyright:          2009-2013 Tony Morris, Thomas DuBuisson
synopsis:           Parse GPX files
category:           Utils
description:        Parse GPS Exchange (GPX) files using HXT into data structures.
homepage:           https://github.com/tonymorris/geo-gpx
category:           Utils
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: CONTRIBUTORS

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/geo-gpx.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language: Haskell2010

  build-depends:    base < 5 && >= 3
                    , hxt > 9
                    , containers
                    , comonad-transformers
                    , data-lens
                    , xsd
                    , newtype

  ghc-options:      -Wall

  hs-source-dirs:   src

  exposed-modules:  Data.Geo.GPX
                    Data.Geo.GPX.Type
                    Data.Geo.GPX.Type.DgpsStation
                    Data.Geo.GPX.Type.Fix
                    Data.Geo.GPX.Type.Degrees
                    Data.Geo.GPX.Type.Longitude
                    Data.Geo.GPX.Type.Latitude
                    Data.Geo.GPX.Type.Bounds
                    Data.Geo.GPX.Type.Extensions
                    Data.Geo.GPX.Type.Pt
                    Data.Geo.GPX.Type.Ptseg
                    Data.Geo.GPX.Type.Email
                    Data.Geo.GPX.Type.Link
                    Data.Geo.GPX.Type.Person
                    Data.Geo.GPX.Type.Copyright
                    Data.Geo.GPX.Type.Wpt
                    Data.Geo.GPX.Type.Trkseg
                    Data.Geo.GPX.Type.Trk
                    Data.Geo.GPX.Type.Rte
                    Data.Geo.GPX.Type.Metadata
                    Data.Geo.GPX.Type.Gpx
                    Data.Geo.GPX.Lens
                    Data.Geo.GPX.Lens.MinlatL
                    Data.Geo.GPX.Lens.MaxlatL
                    Data.Geo.GPX.Lens.MinlonL
                    Data.Geo.GPX.Lens.MaxlonL
                    Data.Geo.GPX.Lens.AuthorL
                    Data.Geo.GPX.Lens.YearL
                    Data.Geo.GPX.Lens.LicenseL
                    Data.Geo.GPX.Lens.IdL
                    Data.Geo.GPX.Lens.DomainL
                    Data.Geo.GPX.Lens.VersionL
                    Data.Geo.GPX.Lens.CreatorL
                    Data.Geo.GPX.Lens.MetadataL
                    Data.Geo.GPX.Lens.WptsL
                    Data.Geo.GPX.Lens.RtesL
                    Data.Geo.GPX.Lens.TrksL
                    Data.Geo.GPX.Lens.ExtensionsL
                    Data.Geo.GPX.Lens.HrefL
                    Data.Geo.GPX.Lens.TextL
                    Data.Geo.GPX.Lens.TypeL
                    Data.Geo.GPX.Lens.NameL
                    Data.Geo.GPX.Lens.DescL
                    Data.Geo.GPX.Lens.CopyrightL
                    Data.Geo.GPX.Lens.LinksL
                    Data.Geo.GPX.Lens.TimeL
                    Data.Geo.GPX.Lens.KeywordsL
                    Data.Geo.GPX.Lens.BoundsL
                    Data.Geo.GPX.Lens.LatL
                    Data.Geo.GPX.Lens.LonL
                    Data.Geo.GPX.Lens.EleL
                    Data.Geo.GPX.Lens.MagvarL
                    Data.Geo.GPX.Lens.GeoidheightL
                    Data.Geo.GPX.Lens.CmtL
                    Data.Geo.GPX.Lens.SrcL
                    Data.Geo.GPX.Lens.SymL
                    Data.Geo.GPX.Lens.FixL
                    Data.Geo.GPX.Lens.SatL
                    Data.Geo.GPX.Lens.HdopL
                    Data.Geo.GPX.Lens.VdopL
                    Data.Geo.GPX.Lens.PdopL
                    Data.Geo.GPX.Lens.AgeofdgpsdataL
                    Data.Geo.GPX.Lens.DgpsidL
                    Data.Geo.GPX.Lens.EmailL
                    Data.Geo.GPX.Lens.LinkL
                    Data.Geo.GPX.Lens.PtsL
                    Data.Geo.GPX.Lens.NumberL
                    Data.Geo.GPX.Lens.RteptsL
                    Data.Geo.GPX.Lens.TrkptsL
                    Data.Geo.GPX.Lens.TrksegsL

test-suite          doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3,
                    doctest >= 0.9.7,
                    filepath >= 1.3,
                    directory >= 1.1,
                    QuickCheck >= 2.0

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
                                  
