name:               gpx
version:            0.7.0
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>, Thomas DuBuisson
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>, Thomas DuBuisson
copyright:          2009-2013 Tony Morris, Thomas DuBuisson
synopsis:           Parse GPX files
category:           Utils
description:        Parse GPS Exchange (GPX) files using HXT into data structures.
homepage:           https://github.com/tonymorris/geo-gpx
category:           Utils
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: CONTRIBUTORS

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/geo-gpx.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language: Haskell2010

  build-depends:    base < 5 && >= 3
                    , hxt > 9
                    , containers
                    , lens >= 3.9.2
                    , xsd >= 0.4.0

  ghc-options:      -Wall

  hs-source-dirs:   src

  exposed-modules:  Data.Geo.Gpx.Gpx
                    Data.Geo.Gpx.DgpsStation
                    Data.Geo.Gpx.Fix
                    Data.Geo.Gpx.Degrees
                    Data.Geo.Gpx.Longitude
                    Data.Geo.Gpx.Latitude
                    Data.Geo.Gpx.Bounds
                    Data.Geo.Gpx.Extensions
                    Data.Geo.Gpx.Pt
                    Data.Geo.Gpx.Ptseg
                    Data.Geo.Gpx.Email
                    Data.Geo.Gpx.Link
                    Data.Geo.Gpx.Person
                    Data.Geo.Gpx.Copyright
                    Data.Geo.Gpx.Wpt
                    Data.Geo.Gpx.Trkseg
                    Data.Geo.Gpx.Trk
                    Data.Geo.Gpx.Rte
                    Data.Geo.Gpx.Metadata

test-suite          doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3
                    ,doctest >= 0.9.7
                    ,filepath >= 1.3
                    ,directory >= 1.1
                    ,QuickCheck >= 2.0

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
                                  
